<resources>
    <string name="app_name">Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="baby">Baby</string>
    <string name="travel">Travel</string>
    <string name="tech">Tech</string>
    <string name="food_drink"><![CDATA[Food&Drink]]></string>
    <string name="btn_back">Back</string>
    <string name="empty_field_hint">empty field</string>
    <string name="logo_text_woman">WomanCompany</string>
    <string name="slogan_text_woman">Woman Slogan</string>
    <string name="motivation_text_woman">Woman Motivation text</string>
    <string name="logo_text_man">ManCompany</string>
    <string name="slogan_text_man">Man Slogan</string>
    <string name="motivation_text_man">Man Motivation text</string>
    <string name="logo_text_baby">BabyCompany</string>
    <string name="slogan_text_baby">Baby Slogan</string>
    <string name="motivation_text_baby">Baby Motivation text</string>
    <string name="logo_text_travel">TravelCompany</string>
    <string name="slogan_text_travel">Travel Slogan</string>
    <string name="motivation_text_travel">Travel Motivation text</string>
    <string name="logo_text_tech">TechCompany</string>
    <string name="slogan_text_tech">Tech Slogan</string>
    <string name="motivation_text_tech">Tech Motivation text</string>
    <string name="logo_text_food_drink">FoodAndDrinkCompany</string>
    <string name="slogan_text_food_drink">Food and Drink Slogan</string>
    <string name="motivation_text_food_drink">Food and Drink Motivation text</string>
    <string name="instagram_logo_text">Instagram</string>
    <string name="username_hint">Username</string>
    <string name="password_text">Password</string>
    <string name="password_hint">Password</string>
    <string name="username_text">Username</string>
    <string name="log_in_btn">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username_is_not_valid">Username is not valid</string>
    <string name="password_is_not_valid">Password is not valid</string>
    <string name="welcome_dear">Welcome dear %s</string>
    <string name="toast_text">You have been successfully longed in %s</string>
</resources>