<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/instagram_background_color"
    tools:context=".InstagramLoginPageFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimens_20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimens_20" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_logo_text"
        style="@style/instagram_logo_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instagram_logo_text"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tv_logo_text"
        style="@style/fill_fields_tag"/>

<!--TODO android:layout_width="0dp"-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        style="@style/fill_fields"
        android:hint="@string/username_hint"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/et_username_field"
        style="@style/fill_fields_tag"/>

<!--TODO ic_lock   -->
<!--TODO android:layout_width="0dp"   -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textWebPassword"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        style="@style/fill_fields"
        android:drawableStart="@drawable/ic_lock_24"
        android:hint="@string/password_hint"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/et_password_field"
        style="@style/forgot_password"/>
//TODO jisht@  android:layout_width="0dp" u padding backgroundi mej petq chi tal
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_style"
        android:text="@string/log_in_btn"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        android:layout_marginTop="@dimen/dimens_50"/>


</androidx.constraintlayout.widget.ConstraintLayout>